--- a/Question3/Question3.ipynb
+++ b/Question3/Question3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "4             [{'num': '004', 'name': 'Charmander'}]  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "4             [{'num': '004', 'name': 'Charmander'}]  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "4             [{'num': '004', 'name': 'Charmander'}]  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "[151 rows x 1 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        "array([ 25., 100.,  nan,  12.,  50., 400.])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "Name: candy_count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,27 +909,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Making a copy for experimenting on the data before making actual changes in df.\n",
+    "\n",
     "df_copy = df.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "# Now, we know that we can't change the datatype of this column to integer unless we handle the Nan values.\n",
+    "# For handling NaN values, I think in this situation, We don't have to use Mean, median, or Mode for this.\n",
+    "# Instead, We can just use 0 instead of NaN as From what i can see in this data, Every Pokemon's Last form of evolution has those NaN values for Candy_count. \n",
+    "# Since they are the last forms of the evolutions, then that means there is no need for more candies to evolve. \n",
+    "# That's why instead of going with any other Way of handling the NaN values, it is safe to use 0 here. \n",
     "\n",
-    "df['candy_count'] = df['candy_count'].fillna(np.mean(df['candy_count']))"
+    "df['candy_count'] = df['candy_count'].fillna(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +973,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>57.3</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -991,15 +997,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>148</th>\n",
-       "      <td>57.3</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149</th>\n",
-       "      <td>57.3</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>150</th>\n",
-       "      <td>57.3</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1010,20 +1016,20 @@
        "     candy_count\n",
        "0           25.0\n",
        "1          100.0\n",
-       "2           57.3\n",
+       "2            0.0\n",
        "3           25.0\n",
        "4          100.0\n",
        "..           ...\n",
        "146         25.0\n",
        "147        100.0\n",
-       "148         57.3\n",
-       "149         57.3\n",
-       "150         57.3\n",
+       "148          0.0\n",
+       "149          0.0\n",
+       "150          0.0\n",
        "\n",
        "[151 rows x 1 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1098,7 @@
        "['num', 'candy_count', 'avg_spawns', 'multipliers']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1203,7 @@
        "      <td>2.01 m</td>\n",
        "      <td>100.0 kg</td>\n",
        "      <td>Bulbasaur Candy</td>\n",
-       "      <td>57</td>\n",
+       "      <td>0</td>\n",
        "      <td>Not in Eggs</td>\n",
        "      <td>0.017</td>\n",
        "      <td>1.7</td>\n",
@@ -1262,7 +1268,7 @@
        "              type  height    weight             candy  candy_count  \\\n",
        "0  [Grass, Poison]  0.71 m    6.9 kg   Bulbasaur Candy           25   \n",
        "1  [Grass, Poison]  0.99 m   13.0 kg   Bulbasaur Candy          100   \n",
-       "2  [Grass, Poison]  2.01 m  100.0 kg   Bulbasaur Candy           57   \n",
+       "2  [Grass, Poison]  2.01 m  100.0 kg   Bulbasaur Candy            0   \n",
        "3           [Fire]  0.61 m    8.5 kg  Charmander Candy           25   \n",
        "4           [Fire]  1.09 m   19.0 kg  Charmander Candy          100   \n",
        "\n",
@@ -1295,7 +1301,7 @@
        "4             [{'num': '004', 'name': 'Charmander'}]  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1481,7 @@
        "[151 rows x 1 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1500,7 @@
       "text/plain": [
        "[1.79]          2\n",
        "[1.4]           2\n",
-       "[2]             1\n",
+       "[1.58]          1\n",
        "[1.48, 1.5]     1\n",
        "[2.65]          1\n",
        "               ..\n",
@@ -1506,7 +1512,7 @@
        "Name: multipliers, Length: 68, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1536,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1552,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1652,7 @@
        "[151 rows x 1 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1722,7 @@
        "['height', 'weight', 'egg']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1821,7 +1827,7 @@
        "[151 rows x 1 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1832,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1851,7 @@
        "       '2.11 m', '3.99 m'], dtype=object)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1864,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1873,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1973,7 @@
        "[151 rows x 1 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1978,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1995,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2089,7 +2095,7 @@
        "[151 rows x 1 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2100,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2127,7 +2133,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2138,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2147,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2164,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2264,7 @@
        "[151 rows x 1 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2269,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2279,7 +2285,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2300,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2318,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2327,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2336,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2436,7 @@
        "[151 rows x 1 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2457,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2551,7 +2557,7 @@
        "      <td>2.01</td>\n",
        "      <td>100.0</td>\n",
        "      <td>Bulbasaur Candy</td>\n",
-       "      <td>57</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.017</td>\n",
        "      <td>2</td>\n",
@@ -2616,7 +2622,7 @@
        "              type  height  weight             candy  candy_count  egg  \\\n",
        "0  [Grass, Poison]    0.71     6.9   Bulbasaur Candy           25  2.0   \n",
        "1  [Grass, Poison]    0.99    13.0   Bulbasaur Candy          100  NaN   \n",
-       "2  [Grass, Poison]    2.01   100.0   Bulbasaur Candy           57  NaN   \n",
+       "2  [Grass, Poison]    2.01   100.0   Bulbasaur Candy            0  NaN   \n",
        "3           [Fire]    0.61     8.5  Charmander Candy           25  2.0   \n",
        "4           [Fire]    1.09    19.0  Charmander Candy          100  NaN   \n",
        "\n",
@@ -2649,7 +2655,7 @@
        "4             [{'num': '004', 'name': 'Charmander'}]  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2660,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
