--- a/Question5/Question5.ipynb
+++ b/Question5/Question5.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
        "     'show': {'href': 'https://api.tvmaze.com/shows/1371'}}}]}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "24"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        " '_embedded']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,19 +728,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Let's access the Data we want. We have to first access the '_embedded' key. After entering it, there is another dictionary named 'episodes'.\n",
     "# We need to get inside that as well. So, The following code will help us reach the main data we want. \n",
     "\n",
-    "sodes_data = data['_embedded']['episodes']"
+    "episodes_data = data['_embedded']['episodes']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1324,7 @@
        "   'show': {'href': 'https://api.tvmaze.com/shows/1371'}}}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
        "4  {'self': {'href': 'https://api.tvmaze.com/epis...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1570,9 +1570,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nid - int\\nurl - string\\nname - string\\nseason - int\\nnumber - int\\ntype - string\\nairdate - date format\\nairtime - 12-hour time format\\nruntime - float\\naverage_rating - float\\nsummary - string without html tags\\nmedium image link - string\\noriginal image link - string\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is the datatype of each Column we need by the end of this task.\n",
     "\n",
@@ -1595,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1604,26 +1615,25 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 36 entries, 0 to 35\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column               Non-Null Count  Dtype         \n",
-      "---  ------               --------------  -----         \n",
-      " 0   id                   36 non-null     int64         \n",
-      " 1   url                  36 non-null     object        \n",
-      " 2   name                 36 non-null     object        \n",
-      " 3   season               36 non-null     int64         \n",
-      " 4   number               36 non-null     int64         \n",
-      " 5   type                 36 non-null     object        \n",
-      " 6   airdate              36 non-null     datetime64[ns]\n",
-      " 7   airtime              36 non-null     object        \n",
-      " 8   airstamp             36 non-null     object        \n",
-      " 9   runtime              36 non-null     float64       \n",
-      " 10  summary              36 non-null     object        \n",
-      " 11  _links               36 non-null     object        \n",
-      " 12  average-rating       36 non-null     float64       \n",
-      " 13  medium_image_link    36 non-null     object        \n",
-      " 14  original_image_link  36 non-null     object        \n",
-      "dtypes: datetime64[ns](1), float64(2), int64(3), object(9)\n",
-      "memory usage: 4.3+ KB\n"
+      "Data columns (total 14 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   id        36 non-null     int64 \n",
+      " 1   url       36 non-null     object\n",
+      " 2   name      36 non-null     object\n",
+      " 3   season    36 non-null     int64 \n",
+      " 4   number    36 non-null     int64 \n",
+      " 5   type      36 non-null     object\n",
+      " 6   airdate   36 non-null     object\n",
+      " 7   airtime   36 non-null     object\n",
+      " 8   airstamp  36 non-null     object\n",
+      " 9   runtime   36 non-null     int64 \n",
+      " 10  rating    36 non-null     object\n",
+      " 11  image     36 non-null     object\n",
+      " 12  summary   36 non-null     object\n",
+      " 13  _links    36 non-null     object\n",
+      "dtypes: int64(4), object(10)\n",
+      "memory usage: 4.1+ KB\n"
      ]
     }
    ],
@@ -1641,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1702,7 +1712,7 @@
        "4  2016-10-30"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1713,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1722,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1838,7 @@
        "4   21:00"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1848,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1857,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +1912,7 @@
        "Name: airtime, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2029,7 @@
        "4       60"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2030,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2039,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2268,7 @@
        "4  {'self': {'href': 'https://api.tvmaze.com/epis...  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2277,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2286,7 +2296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2466,7 +2476,7 @@
        "4  {'self': {'href': 'https://api.tvmaze.com/epis...               0  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2485,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2494,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2538,7 +2548,7 @@
        " 7.5]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2557,7 +2567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2566,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2746,7 +2756,7 @@
        "4  {'self': {'href': 'https://api.tvmaze.com/epis...             8.0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2757,7 +2767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2768,7 +2778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2777,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2951,7 +2961,7 @@
        "4  {'self': {'href': 'https://api.tvmaze.com/epis...             8.0  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2970,7 +2980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3031,7 +3041,7 @@
        "4  <p>Dolores takes the first step on her path of..."
       ]
      },
-     "execution_count": 52,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3042,16 +3052,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['summary'] = df['summary'].str.replace(\"<p>\", \"\")"
+    "df['summary'] = df['summary'].str.replace(\"<p>\", \"\")\n",
+    "df['summary'] = df['summary'].str.replace(\"</p>\", \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3225,7 +3236,7 @@
        "4  {'self': {'href': 'https://api.tvmaze.com/epis...             8.0  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3252,7 +3263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3313,7 +3324,7 @@
        "4  {'medium': 'https://static.tvmaze.com/uploads/..."
       ]
      },
-     "execution_count": 60,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3324,7 +3335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3340,7 +3351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3353,7 +3364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3362,7 +3373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3549,7 +3560,7 @@
        "4  https://static.tvmaze.com/uploads/images/origi...  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3560,7 +3571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3602,6 +3613,15 @@
    "metadata": {},
    "source": [
     "Now, we are completely done with the formatting of every field of this extracted data. We can either convert this into csv or even excel format if we want to."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('ShowRating.csv', index=False)"
    ]
   },
   {
